# ChangeLog for dev-perl/Moose
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.97 2012/05/02 13:48:08 tove Exp $

*Moose-2.60.100 (02 May 2012)

  02 May 2012; Torsten Veller <tove@gentoo.org> +Moose-2.60.100.ebuild:
  Version bump

  10 Apr 2012; Torsten Veller <tove@gentoo.org> Moose-1.240.ebuild:
  Drop amd64 and x86 keywords from old Moose

  07 Apr 2012; Markus Meier <maekke@gentoo.org> Moose-2.40.200.ebuild:
  x86 stable, bug #395297

  06 Apr 2012; Agostino Sarubbo <ago@gentoo.org> Moose-2.40.200.ebuild:
  Stable for amd64, wrt bug #395297

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -Moose-2.20.200.ebuild,
  -Moose-2.20.500.ebuild, -Moose-2.40.100.ebuild:
  Cleanup

*Moose-2.40.200 (05 Feb 2012)

  05 Feb 2012; Torsten Veller <tove@gentoo.org> +Moose-2.40.200.ebuild:
  Version bump

*Moose-2.40.100 (18 Nov 2011)

  18 Nov 2011; Torsten Veller <tove@gentoo.org> +Moose-2.40.100.ebuild:
  Version bump

*Moose-2.20.500 (25 Sep 2011)

  25 Sep 2011; Torsten Veller <tove@gentoo.org> +Moose-2.20.500.ebuild:
  Version bump

  24 Sep 2011; Fabian Groffen <grobian@gentoo.org> Moose-2.20.200.ebuild:
  Marked ~x64-macos

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Moose-0.92.ebuild,
  -Moose-1.19.ebuild, -Moose-1.250.0.ebuild, -Moose-2.1.0.ebuild:
  Cleanup

  13 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> Moose-1.240.ebuild:
  ppc stable wrt #350853

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Moose-2.0.0.ebuild,
  -Moose-2.0.100.ebuild, -Moose-2.0.200.ebuild, -Moose-2.0.600.ebuild,
  -Moose-2.0.700.ebuild, -Moose-2.0.800.ebuild, -Moose-2.20.0.ebuild,
  -Moose-2.20.100.ebuild:
  Cleanup

*Moose-2.20.200 (26 Jul 2011)

  26 Jul 2011; Torsten Veller <tove@gentoo.org> +Moose-2.20.200.ebuild:
  Version bump

*Moose-2.20.100 (22 Jul 2011)

  22 Jul 2011; Torsten Veller <tove@gentoo.org> +Moose-2.20.100.ebuild:
  Version bump
