@@ -4,15 +4,17 @@ Hash: SHA256
 DIST Moo-0.009014.tar.gz 33026 RMD160 2e19a2873122e801ba51cb91cc985093f0cedeff SHA1 167d76615d6c0466e66223930343fd833ca1dc66 SHA256 187218e37d9a8e277daf166af0b99cbca5c4cd4e391c81c73679c3cbbf4dad9f
 DIST Moo-0.091001.tar.gz 39820 RMD160 d89267a75e49074f08236370b6ee6acdabad9f9c SHA1 5b5de44e77706c8cccbb20b9e09ebf6e64860952 SHA256 56b7f8a543f0074e87c1d94b95b0c70d58ce3067f1acb601822d1334116a75ea
 DIST Moo-0.091002.tar.gz 41594 RMD160 f0b2020a6adcf432ea79b75f1b7d3441de705996 SHA1 7de613e7cc4fe0b9f8452a3179bb8963bf061891 SHA256 b2df6468c2144e82af021b6500cda9979185c1515a85e2fe1d2e1e9275d7049a
+DIST Moo-0.091004.tar.gz 45718 RMD160 cdc43c87848d3f77661af7c75e65c7372db5bcc0 SHA1 db185250c70a1bd40608bb31433c2bb00d7a9f88 SHA256 cc6df65ab07117cda3c2b7386982890396560f28843e94d11e48bb65b83dfb0d
 EBUILD Moo-0.9.14.ebuild 681 RMD160 7157bc123fdfffd4f41a4aa6fc7beb4d640421fb SHA1 2d4530a051d2c847d518d75898434760c54c9064 SHA256 85b5488502ae4e9c5f141337654a7d3c43c49753ca6c62ae7d9e75a8082e81b8
 EBUILD Moo-0.91.1.ebuild 724 RMD160 2237ae3ed8ab886737f6d811889e21f0fa774f95 SHA1 ed5d9b3204ee9b18b8794d738297a0650665f065 SHA256 1abddf3f7283195e0f417a8569cb38328ec4db7cfd45be696ae6693f2ba30e63
 EBUILD Moo-0.91.2.ebuild 724 RMD160 37207a397559f7b3416f0e8798f2499573a5389c SHA1 2469718e8d86988a3f21b89d1e30389756a47089 SHA256 7a8fe1e115164148d98b8130672dc65a785dd6996c4275134e9069f24f7d5c45
-MISC ChangeLog 1638 RMD160 6aa90130aeee877d7467511b360162bd829b4f52 SHA1 4c9042640904ce16caa8c53d93d01a3ccb3b4263 SHA256 3aa3766516a4783c609371dcff39fdf234a04cbd071b84b2783ad8b16c2a6f89
+EBUILD Moo-0.91.4.ebuild 724 RMD160 2f03b648b21748743de21b1a844217a6ada68670 SHA1 4178c24b5ab604f9380d90291c367d2b1c536d21 SHA256 a6438c05590bf6ea291de0bbb4b1a89680e9548ab884056a67df027664e61f4b
+MISC ChangeLog 1749 RMD160 cb91408e5f1748c38f2a92e9c0e822a5b0138429 SHA1 3e8e12972bf9cb05aa9d0c69e40c13fdef02a6b2 SHA256 648f28a257676d410004c767e55074c685a6837ea892de89c7022eee5d0217c7
 MISC metadata.xml 224 RMD160 f696fe633be0eceb51f07d8ac64d1e511b0ed760 SHA1 6cf5f7e06576f146e3d91a4fa408b09f09145c42 SHA256 3682f9b7bd8441202c61975e63fdb50727d63329dfa374025e07a83218cf1e62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk+mQl8ACgkQV3J2n04EauyV1wCeJULR944ZU6RTU+4CDlqw1nop
-LxUAoNyXf5XTgPZKIOYsqwjlBv14N/a/
-=MuP0
+iEYEAREIAAYFAk+pYpYACgkQV3J2n04EauztRQCeL0IvMoo87fZeeAU+80Lhfh4I
+EbMAmwQ309eptQh0jFjhh0pi4eaXcEOe
+=CO6N
 -----END PGP SIGNATURE-----
