@@ -4,15 +4,17 @@ Hash: SHA256
 DIST Moose-1.24.tar.gz 470108 RMD160 1562e35f184d2ddb9478892654d71869b9bc9d1f SHA1 3f2b20cb14ed6660666fe2ecbef05c221988b509 SHA256 787ecd308bd6c2565739d092f8cf28f849721b8d197b1ef8eed14bd443a53791
 DIST Moose-2.0402.tar.gz 677553 RMD160 2b1121764c785bb1cb2697f2dce897807bccb412 SHA1 745c825c354dea555c3ceb395157934082ea4dca SHA256 d033fa37b7c7451312fdd1b758511afe43b4bba10acce063aaf219dbd7008a6e
 DIST Moose-2.0601.tar.gz 1032978 RMD160 1d2b03afecdab21d35afe4cdcf360a84b01de39c SHA1 0aad640877c67ac90093ab7e2e1d10fbb150716f SHA256 81e299a1e686bddd1dbb012793f0d7c367cf8eccce27b4fd44253e38fb8e4ab9
+DIST Moose-2.0602.tar.gz 696832 RMD160 ccfcd24ad0d9725343e8f1e2cde06210236eac9f SHA1 b22e4353d24c6f5ae068457af7211b9f7115b835 SHA256 fa20e3633bfb767656760c0887e4e6164593b7822fc3130ab37c1004d32b5c3f
 EBUILD Moose-1.240.ebuild 945 RMD160 9cf8b22e637cefa982b4060b1700c9226cfb546e SHA1 bdbe1c3ea0978692a1542ee5b3ae50a56a4a568b SHA256 481edc464dfbd4d305b70a283aa74875562d0ded772b31e82f860a0442ab408f
 EBUILD Moose-2.40.200.ebuild 2978 RMD160 6d1acb413a73c7529424e887be767f03620c145d SHA1 1cf2f6a5e503f0cfe14e082e481570d3df0dbf19 SHA256 7e089bf90882a808595df799963d130f4d1f2e92363e0452088165d7546b7772
 EBUILD Moose-2.60.100.ebuild 3072 RMD160 6e4f6dd78100a22e3f1996bc5e1eb753404debf9 SHA1 92b54d461a8ca03f630ddd5d2e78ad1b66b261fc SHA256 3deb55e8638eef6f4025808cbf2d63ddc599fe66c74714053f98b6f77a730852
-MISC ChangeLog 11876 RMD160 286c65624c59723687791fab19217c3588bacaa1 SHA1 554e377ee5366c7d3b072bed4874d33fa16424f0 SHA256 cdb55c4a3742e5330fdfa2c55981dc4557de6623c0b98f1e6af528de91b4bc2e
+EBUILD Moose-2.60.200.ebuild 3072 RMD160 5b3213ae0161d79de889c7e894c806a29a0574e8 SHA1 23651d5d7abdced08ed791d7a696087b3a696622 SHA256 6869c45c4f579a8902f2a172aea939e5e2801c9f8c2271c9d0370bbc65c0a712
+MISC ChangeLog 11995 RMD160 ad751ab788fcff9eb4a0d340874b2d6ed3a160c6 SHA1 ca14bab549bc6904cc76f77c0ba8e6ca45da6d40 SHA256 47c20f1d02bff53b5a3229c85f74cc865b4e9d2c620e4ca0d29f7bc8eae9e17d
 MISC metadata.xml 231 RMD160 cd36da6d6b8157aff8c980776189008447b755af SHA1 6be08908cce253e3126b4439cd84a5da4ff068e8 SHA256 0c8ea32c7de9448b9c2853926c5c60f5578e40f4e72f0fe7291f06c897913962
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk+hOx0ACgkQV3J2n04EauylgQCgh/D2cVephlsugtg4SjshaMJe
-lmUAnjy0FbrUK3uuc4uKksgi2AjMnFF0
-=lS8x
+iEYEAREIAAYFAk+pYhQACgkQV3J2n04Eauwl1wCghYjCrlKRM0DZ18leF8JC3aYU
+9NwAoIP+dU5f71py6wQfzozKHGEfKUaf
+=fvz0
 -----END PGP SIGNATURE-----
