@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Moose
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.97 2012/05/02 13:48:08 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.98 2012/05/08 18:12:31 tove Exp $
+
+*Moose-2.60.200 (08 May 2012)
+
+  08 May 2012; Torsten Veller <tove@gentoo.org> +Moose-2.60.200.ebuild:
+  Version bump
 
 *Moose-2.60.100 (02 May 2012)
 
